# wsl_test

./: pyproject.toml
hello_poetry/scripts/: say_hello.py
