[tool.poetry]
name = "hello-poetry"
version = "0.1.0"
description = ""
authors = ["Michaill-M <MichaelMelnikov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"

[tool.poetry.scripts]
say-hello = "hello_poetry.scripts.say_hello:main"

[tool.poetry.group.dev.dependencies]
ipython = "^8.22.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
